--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,50 @@
 body {
     text-align: center;
 }
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(13, 80, 168);
+    padding: 1rem 1.5rem;
+    width: 20rem;
+    border-radius: 0.5rem;
+    align-items: center;
+    margin: auto;
+}
+
+.modal-restart {
+    margin-left: 6rem;
+    background-color: rgb(250, 170, 23);
+    color: white;
+    font-weight: bolder;
+    border-radius: 0.25rem;
+}
+
+.modal-restart:hover {
+    transform: scale(1.2);
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
